UI almost working

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -1,14 +1,16 @@
 ﻿@using System.Security.Principal
 @if (User.Identity.IsAuthenticated)
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-text">Hello @User.Identity.Name!</li>
-        <li><a asp-area="AzureAD" asp-controller="Account" asp-action="SignOut">Sign out</a></li>
-    </ul>
+<ul class="nav navbar-nav navbar-right">
+    <li class="navbar-text">Hello @User.Identity.Name!</li>
+    @*<li><a asp-area="AzureAD" asp-controller="Account" asp-action="SignOut">Sign out</a></li>*@
+    <li class="navbar-text"><a asp-area="" asp-controller="Home" asp-action="SignOut">Sign out</a></li>
+</ul>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="AzureAD" asp-controller="Account" asp-action="SignIn">Sign in</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Join</a></li>
     </ul>
 }
