Added github link.

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
@@ -50,5 +50,6 @@
             to make the appropriate authorization and data separation decisions. In this app, all the claims recived in the token
             are displayed on this page.
         </p>
+        <p>Source code for this app may be <a href="https://github.com/mrochon/b2csamples">found on github.</a></p>
     }
 </div>
