--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
@@ -50,6 +50,7 @@
             to make the appropriate authorization and data separation decisions. In this app, all the claims recived in the token
             are displayed on this page.
         </p>
+        <p>This <a href="https://b2crestapis.azurewebsites.net/tenant/members?tenantName=TENANT1">API will return a list of all members and their roles</a> given the tenant name.</p>
         <p>Source code for this app may be <a href="https://github.com/mrochon/b2csamples">found on github.</a></p>
         <p>For more info <a href="mailto:sailingrock@live.com">email me</a> or use the github source repo comments area.</p>
     }
