Adding REST for members

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,6 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Join</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Signin</a></li>
     </ul>
 }
