--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_Layout.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_Layout.cshtml
@@ -27,14 +27,17 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @*<ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create new tenant</a>
-                        </li>
-                    </ul>*@
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Members</a>
+                            </li>
+                        }
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
