--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Index.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Index.cshtml
@@ -13,7 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Role)
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Roles)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DisplayName)
@@ -25,7 +28,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Role)
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Roles)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DisplayName)
