--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Delete.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
+            @Html.DisplayNameFor(model => model.Roles)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
+            @Html.DisplayFor(model => model.Roles)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DisplayName)
