--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Edit.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
+                <label asp-for="Roles" class="control-label"></label>
+                <input asp-for="Roles" class="form-control" />
+                <span asp-validation-for="Roles" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DisplayName" class="control-label"></label>
