--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Invite.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Members/Invite.cshtml
@@ -9,7 +9,7 @@
 <h4>Member</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div-- class="col-md-4">
         @if (string.IsNullOrEmpty(Model.InvitationUrl))
         {
             <form asp-action="Edit">
@@ -19,11 +19,11 @@
                     <input asp-for="Email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <!--div class="form-group">
                     <label asp-for="IsAdmin" class="control-label"></label>
                     <input asp-for="IsAdmin" class="form-control" />
                     <span asp-validation-for="IsAdmin" class="text-danger"></span>
-                </div>
+                </div-->
                 <div class="form-group">
                     <input type="submit" value="Invite" class="btn btn-primary" />
                 </div>
@@ -31,7 +31,9 @@
         }
         else
         {
-            <dl class="row">
+            <h5>Share the following link with the invited user to signup.</h5>
+            <p>@Model.InvitationUrl</p>
+            <!--dl class="row">
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.Email)
                 </dt>
@@ -50,7 +52,7 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.InvitationUrl)
                 </dd>
-            </dl>
+            </dl-->
         }
     </div>
 </div>
