Fixed and republished

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_Layout.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -40,7 +40,7 @@
                             }
                         </ul>
                         <partial name="_LoginPartial" />
-                    </div>*@
+                    </div>
             </div>
         </nav>
     </header>
@@ -77,9 +77,9 @@
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <div class="text-center">
+    @*<div class="text-center">
         <p> Sorry, fixing some bugs. Should be back in a few days (+-2/20/2020)</p>
-    </div>
+    </div>*@
 
     @RenderSection("Scripts", required: false)
 </body>
