--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@**<div>
+<div>
         @if (User.Identity.IsAuthenticated)
         {
             <table>
@@ -65,4 +65,4 @@
          <p>Source code for this app may be <a href="https://github.com/mrochon/b2csamples">found on github.</a></p>
         <p>For more info <a href="mailto:sailingrock@live.com">email me</a> or use the github source repo comments area.</p>
         }
-    </div>*@
+    </div>
