Modify login html to allow tenant name entry

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -9,8 +9,9 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Signin</a></li>
-    </ul>
+<ul class="nav navbar-nav navbar-right">
+    <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create new tenant</a></li>
+    <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Sign-in to</a></li>
+    <li class="nav-item"><input asp-for="@ViewData["tenant"]" /></li>
+</ul>
 }
