Get user to enter tenant name unless already in query string.

--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,6 @@ else
 {
 <ul class="nav navbar-nav navbar-right">
     <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewTenant">Create new tenant</a></li>
-    <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Sign-in to</a></li>
-    <li class="nav-item"><input asp-for="@ViewData["tenant"]" /></li>
+    <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemberSignIn">Member sign-in</a></li>
 </ul>
 }
