--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/MemberSignIn.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Home/MemberSignIn.cshtml
@@ -3,9 +3,12 @@
 }
 
 <div>
-    <p>Add query parameter <i>tenant=&ltyour tenant name&gt</i> to the application url to avoid having to enter the name here in the future.</p>
+    <p>Use <b><i>https://b2cmultitenant.azurewebsites.net?tenant=&ltyour tenant name&gt</i></b> to avoid having to enter the tenant name here in the future.</p>
     <form asp-action="Edit">
         Tenant name: <input type="text" name="tenantName"><br>
         <input type="submit" value="Submit">
     </form>
+    <br/>
+    <p>To sign in as member you either need to create a tenant or be invited to an existing tenant by it's administrator
+    (the user who created the tenant or was appointed an administrator by an existing administrator).</p>
 </div>
