--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Tenant/Edit.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Tenant/Edit.cshtml
@@ -21,16 +21,16 @@
                 <input asp-for="LongName" class="form-control" />
                 <span asp-validation-for="LongName" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <!--div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsAADTenant" /> @Html.DisplayNameFor(model => model.IsAADTenant)
                 </label>
-            </div>
+            </!--div>
             <div class="form-group">
                 <label asp-for="IdPDomainName" class="control-label"></label>
                 <input asp-for="IdPDomainName" class="form-control" />
                 <span asp-validation-for="IdPDomainName" class="text-danger"></span>
-            </div>
+            </div-->
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
