--- a/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/Apps/B2CMultiTenant/B2CMultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -6,12 +6,12 @@
     @if (User.HasClaim(c => c.Type == "appTenants"))
     {
         var tenant = User.FindFirst(c => c.Type == "appTenantName").Value; 
-        <li class="navbar-text">
-            <select id="tenants" onchange="selectTenant();">
-                <option value="@tenant">@tenant</option>
+        <li>
+            <select class="navbar-text" id="tenants" onchange="selectTenant();">
+                <option class="navbar-text" value="@tenant">@tenant</option>
                 @foreach (var t in User.FindAll(c => (c.Type == "appTenants") && (c.Value != tenant)).Select(c => c.Value))
                 {
-                    <option value="@t">@t</option>
+                    <option  class="navbar-text" value="@t">@t</option>
                 }
             </select>
         </li>
